--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
   font-family: Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: #333;
-  background-color: #f9f9f9;
+  color: #ffffff;
+  background-color: #388896;
 }
 
 body {
