--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -5,6 +5,8 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    word-wrap: break-word; /* Ajusta las palabras largas */
+    overflow-wrap: break-word; /* Asegura que las palabras largas se dividan */
 }
 
 h2 {
