--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -4,6 +4,8 @@
     background-color: #f0f0f0;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    word-wrap: break-word; /* Ajusta las palabras largas */
+    overflow-wrap: break-word; /* Asegura que las palabras largas se dividan */
 }
 
 h2 {
