--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -4,3 +4,38 @@
     max-width: 70%;
     margin: auto;
 }
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #00796b;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 10px 0;
+}
+
+button:hover {
+    background-color: #004d40;
+}
+
+.HomeButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  padding: 0;
+}
+
+.HomeButton h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #ffffff;
+  margin: 0;
+  transition: color 0.3s ease;
+}
+
+.HomeButton:hover h1 {
+  color: #00bfa5;
+}
